Fix wrapping

--- a/client/main.less
+++ b/client/main.less
@@ -151,7 +151,7 @@
   .line-content {
     padding-left: 36px;
     overflow: hidden;
-    
+    white-space: pre;
 
     .hljs-comment {
       color: #777;
